# krunner_locate

./: CMakeLists.txt  readme.rst
source/: CMakeLists.txt  krunner_locate.cxx  krunner_locate.hxx  krunner_locate.json.in  query.cxx  query.hxx  test_cli.cxx  use_locate.cxx  use_locate.hxx
